--- a/.github/workflows/notify-pr-opened.yml
+++ b/.github/workflows/notify-pr-opened.yml
@@ -13,7 +13,7 @@ jobs:
           echo "PR node_id : ${{ github.event.pull_request.node_id }}"
           echo "PR html_url : ${{ github.event.pull_request.html_url }}"
           echo "PR title : ${{ github.event.pull_request.title }}"
-          echo "PR user name : ${{ github.event.pull_request.user.name }}"
+          echo "PR user : ${{ github.event.pull_request.user }}"
           echo "PR base label : ${{ github.event.pull_request.base.label }}"
     - name: Google Chat Notification
       run: |
@@ -48,7 +48,7 @@ jobs:
                                 "knownIcon": "PERSON"
                               },
                               "topLabel": "Autor",
-                              "text": "${{ github.event.pull_request.user.email }}"
+                              "text": "${{ github.event.pull_request.user.login }}"
                             }
                           },
                           {
