--- a/.github/workflows/notify-pr-opened.yml
+++ b/.github/workflows/notify-pr-opened.yml
@@ -8,10 +8,13 @@ jobs:
     steps:
     - name: Google Chat Notification
       run: |
-          curl --location --request POST '${{ secrets.GOOGLE_CHAT_WEBHOOK }}' \
+          curl --location --request POST '${{ secrets.GOOGLE_CHAT_WEBHOOK }}&messageReplyOption=MESSAGE_REPLY_OPTION_UNSPECIFIED' \
           --header 'Content-Type: application/json' \
           --data-raw '
             {
+              "thread" {
+                "threadKey": "${{ github.event.pull_request.node_id }}"
+              }
               "cardsV2": [
                 {
                   "cardId": "${{ github.event.pull_request.node_id }}",
