--- a/.github/workflows/notify-pr-reviewed.yml
+++ b/.github/workflows/notify-pr-reviewed.yml
@@ -22,13 +22,16 @@ jobs:
           echo "REVIEW user login : ${{ github.event.review.user.login }}"
     - name: Google Chat Notification
       run: |
-          curl --location --request POST '${{ secrets.GOOGLE_CHAT_WEBHOOK }}' \
+          curl --location --request POST '${{ secrets.GOOGLE_CHAT_WEBHOOK }}&messageReplyOption=REPLY_MESSAGE_OR_FAIL' \
           --header 'Content-Type: application/json' \
           --data-raw '
             {
+              "thread" {
+                "threadKey": "${{ github.event.pull_request.node_id }}"
+              }
               "cardsV2": [
                 {
-                  "cardId": "${{ github.event.pull_request.node_id }}",
+                  "cardId": "${{ github.event.review.node_id }}",
                   "card": {
                     "header": {
                       "title": "Pull Request Revisado - Aprovado",
