--- a/.github/workflows/notify-pr-merged.yml
+++ b/.github/workflows/notify-pr-merged.yml
@@ -1,14 +1,15 @@
-name: Notify PR opened
+name: Notify PR merged
 on:
   pull_request:
-    types: [opened]
+    types: [closed]
 jobs:
-  notify-on-google-chat:
+  notify-on-google-chat-merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: Google Chat Notification
       run: |
-          curl --location --request POST '${{ secrets.GOOGLE_CHAT_WEBHOOK }}&messageId=client-${{ github.event.pull_request.number }}&messageReplyOption=REPLY_MESSAGE_FALLBACK_TO_NEW_THREAD' \
+          curl --location --request PATCH 'https://chat.googleapis.com/v1/spaces/${{ secrets.GOOGLE_CHAT_SPACE }}/messages/client-${{ github.event.pull_request.number }}?key=${{ secrets.GOOGLE_CHAT_KEY }}&token=${{ secrets.GOOGLE_CHAT_TOKEN }}&updateMask=cardsV2' \
           --header 'Content-Type: application/json' \
           --data-raw '
             {
@@ -20,7 +21,7 @@ jobs:
                   "cardId": "${{ github.event.pull_request.node_id }}",
                   "card": {
                     "header": {
-                      "title": "Novo Pull Request - ${{ github.event.pull_request.base.label }}",
+                      "title": "Pull Request Mergeado - ${{ github.event.pull_request.base.label }}",
                       "subtitle": "${{ github.event.pull_request.title }}",
                       "imageUrl": "https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png",
 
@@ -31,9 +32,14 @@ jobs:
                         "uncollapsibleWidgetsCount": 0,
                         "widgets": [
                           {
+                            "textParagraph": {
+                              "text": "<b><font color=\"#FF0000\">MERGEADO!</font></b>"
+                            }
+                          },
+                          {
                             "decoratedText": {
                               "topLabel": "Título",
-                              "text": "${{ github.event.pull_request.title }}"
+                              "text": "<s>${{ github.event.pull_request.title }}</s>"
                             }
                           },
                           {
@@ -42,7 +48,7 @@ jobs:
                                 "knownIcon": "PERSON"
                               },
                               "topLabel": "Autor",
-                              "text": "${{ github.event.pull_request.user.login }}"
+                              "text": "<s>${{ github.event.pull_request.user.login }}</s>"
                             }
                           },
                           {
@@ -51,7 +57,7 @@ jobs:
                                 "knownIcon": "BOOKMARK"
                               },
                               "topLabel": "Branch alvo",
-                              "text": "${{ github.event.pull_request.base.label }}"
+                              "text": "<s>${{ github.event.pull_request.base.label }}</s>"
                             }
                           },
                           {
@@ -60,7 +66,7 @@ jobs:
                                 "knownIcon": "DESCRIPTION"
                               },
                               "topLabel": "Link para o GitHub",
-                              "text": "<a href=\"${{ github.event.pull_request.html_url }}">${{ github.event.pull_request.html_url }}</a>"
+                              "text": "<a href=\"${{ github.event.pull_request.html_url }}\">${{ github.event.pull_request.html_url }}</a>"
                             }
                           },
                           {
